--- a/homelab/templates/firefly.yaml
+++ b/homelab/templates/firefly.yaml
@@ -61,8 +61,8 @@ metadata:
   name: firefly-upload-pvc
 spec:
   accessModes:
-    - ReadWriteMany
-  storageClassName: nfs-client
+    - ReadWriteOnce
+  storageClassName: local-path
   resources:
     requests:
       storage: 5Gi
