--- a/homelab/templates/freshrss.yaml
+++ b/homelab/templates/freshrss.yaml
@@ -42,8 +42,8 @@ metadata:
   name: freshrss-pvc
 spec:
   accessModes:
-    - ReadWriteMany
-  storageClassName: nfs-client
+    - ReadWriteOnce
+  storageClassName: local-path
   resources:
     requests:
       storage: 500Mi
