--- a/homelab/config_files/searxng-uwsgi.ini
+++ b/homelab/config_files/searxng-uwsgi.ini
@@ -4,7 +4,8 @@ uid = searxng
 gid = searxng
 
 # Number of workers (usually CPU count)
-workers = 4
+workers = %k
+threads = 4
 
 # The right granted on the created socket
 chmod-socket = 666
@@ -23,23 +24,24 @@ module = searx.webapp
 pythonpath = /usr/local/searxng/
 chdir = /usr/local/searxng/searx/
 
-# Disable logging for privacy
-disable-logging=True
+# automatically set processes name to something meaningful
+auto-procname = true
 
-# But keep errors for 2 days
-touch-logrotate = /run/uwsgi-logrotate
-unique-cron = 15 0 -1 -1 -1 { touch /run/uwsgi-logrotate  }
-log-backupname = /var/log/uwsgi/uwsgi.log.1
-logto = /var/log/uwsgi/uwsgi.log
+# Disable request logging for privacy
+disable-logging = true
+log-5xx = true
+
+# Set the max size of a request (request-body excluded)
+buffer-size = 8192
 
 # No keep alive
 # See https://github.com/searx/searx-docker/issues/24
 add-header = Connection: close
 
 # uwsgi serves the static files
-# expires set to one day as Flask does
+# expires set to one year since there are hashes
 static-map = /static=/usr/local/searxng/searx/static
-static-expires = /* 864000
+static-expires = /* 31557600
 static-gzip-all = True
 offload-threads = %k
 
