--- a/homelab/templates/calibre.yaml
+++ b/homelab/templates/calibre.yaml
@@ -47,8 +47,8 @@ metadata:
   name: calibre-data-pvc
 spec:
   accessModes:
-    - ReadWriteMany
-  storageClassName: nfs-client
+    - ReadWriteOnce
+  storageClassName: local-path
   resources:
     requests:
       storage: 5Gi
@@ -59,8 +59,8 @@ metadata:
   name: calibre-config-pvc
 spec:
   accessModes:
-    - ReadWriteMany
-  storageClassName: nfs-client
+    - ReadWriteOnce
+  storageClassName: local-path
   resources:
     requests:
       storage: 1Gi
