--- a/homelab/templates/homeassistant.yaml
+++ b/homelab/templates/homeassistant.yaml
@@ -46,7 +46,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: nfs-client
+  storageClassName: local-path
   resources:
     requests:
       storage: 1Gi
