--- a/homelab/templates/irc.yaml
+++ b/homelab/templates/irc.yaml
@@ -43,7 +43,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: nfs-client
+  storageClassName: local-path
   resources:
     requests:
       storage: 5Gi
