--- a/homelab/templates/nodered.yaml
+++ b/homelab/templates/nodered.yaml
@@ -29,11 +29,11 @@ spec:
               protocol: TCP
           resources:
             requests:
-              memory: "64Mi"
-              cpu: "50m"
+              memory: "256Mi"
+              cpu: "500m"
             limits:
-              memory: "128Mi"
-              cpu: "250m"
+              memory: "512Mi"
+              cpu: "1"
           volumeMounts:
             - name: nodered-data
               mountPath: /data
@@ -57,7 +57,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: nfs-client
+  storageClassName: local-path
   resources:
     requests:
       storage: 5Gi
