--- a/homelab/templates/postgres.yaml
+++ b/homelab/templates/postgres.yaml
@@ -58,7 +58,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: nfs-client
+  storageClassName: local-path
   resources:
     requests:
       storage: 10Gi
