--- a/homelab/templates/shiori.yaml
+++ b/homelab/templates/shiori.yaml
@@ -53,8 +53,8 @@ metadata:
   name: shiori-data-pvc
 spec:
   accessModes:
-    - ReadWriteMany
-  storageClassName: nfs-client
+    - ReadWriteOnce
+  storageClassName: local-path
   resources:
     requests:
       storage: 5Gi
