--- a/homelab/templates/traefik.yaml
+++ b/homelab/templates/traefik.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: traefik-dashboard
-  namespace: kube-system
+  namespace: default 
   labels:
     app: traefik-dashboard
 spec:
@@ -11,7 +11,7 @@ spec:
       port: 9000
       targetPort: 9000
   selector:
-    app.kubernetes.io/instance: traefik
+    app.kubernetes.io/instance: traefik-default
     app.kubernetes.io/name: traefik
   type: ClusterIP
 ---
@@ -19,7 +19,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: traefik-metrics
-  namespace: kube-system
+  namespace: default
   labels:
     app: traefik-metrics
 spec:
@@ -28,7 +28,7 @@ spec:
       port: 9100
       targetPort: 9100
   selector:
-    app.kubernetes.io/instance: traefik
+    app.kubernetes.io/instance: traefik-default
     app.kubernetes.io/name: traefik
   type: ClusterIP
 ---
@@ -36,7 +36,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: traefik-ingress
-  namespace: kube-system
+  namespace: default 
 spec:
   tls:
     - secretName: "le-cert"
