--- a/homelab/templates/redis.yaml
+++ b/homelab/templates/redis.yaml
@@ -22,11 +22,11 @@ spec:
               protocol: TCP
           resources:
             requests:
-              memory: "32Mi"
-              cpu: "10m"
+              memory: "512Mi"
+              cpu: "500m"
             limits:
-              memory: "64Mi"
-              cpu: "50m"
+              memory: "1Gi"
+              cpu: "1"
           imagePullPolicy: {{ .Values.images.redis.imagePullPolicy }}
 ---
 apiVersion: v1
